fix: add auth post
