# internal/handler/userhandler/user_handler.go
@@ -6,8 +6,7 @@ import (
   "log/slog"
   "net/http"
 
-  "github.com/go-chi/chi"
-  "github.com/google/uuid"
+  "github.com/wiliamvj/api-users-golang/internal/common/utils"
   "github.com/wiliamvj/api-users-golang/internal/dto"
   "github.com/wiliamvj/api-users-golang/internal/handler/httperr"
   "github.com/wiliamvj/api-users-golang/internal/handler/validation"
@@ -81,19 +80,11 @@ func (h *handler) CreateUser(w http.ResponseWriter, r *http.Request) {
 func (h *handler) UpdateUser(w http.ResponseWriter, r *http.Request) {
   var req dto.UpdateUserDto
 
-  id := chi.URLParam(r, "id")
-  if id == "" {
-    slog.Error("id is empty", slog.String("package", "userhandler"))
-    w.WriteHeader(http.StatusBadRequest)
-    msg := httperr.NewBadRequestError("id is required")
-    json.NewEncoder(w).Encode(msg)
-    return
-  }
-  _, err := uuid.Parse(id)
+  user, err := utils.DecodeJwt(r)
   if err != nil {
-    slog.Error(fmt.Sprintf("error to parse id: %v", err), slog.String("package", "userhandler"))
+    slog.Error("error to decode jwt", slog.String("package", "userhandler"))
     w.WriteHeader(http.StatusBadRequest)
-    msg := httperr.NewBadRequestError("error to parse id")
+    msg := httperr.NewBadRequestError("error to decode jwt")
     json.NewEncoder(w).Encode(msg)
     return
   }
@@ -119,7 +110,7 @@ func (h *handler) UpdateUser(w http.ResponseWriter, r *http.Request) {
     json.NewEncoder(w).Encode(httpErr)
     return
   }
-  err = h.service.UpdateUser(r.Context(), req, id)
+  err = h.service.UpdateUser(r.Context(), req, user.ID)
   if err != nil {
     slog.Error(fmt.Sprintf("error to update user: %v", err), slog.String("package", "userhandler"))
     if err.Error() == "user not found" {
@@ -152,25 +143,17 @@ func (h *handler) UpdateUser(w http.ResponseWriter, r *http.Request) {
 //	@Failure		400	{object}	httperr.RestErr
 //	@Failure		404	{object}	httperr.RestErr
 //	@Failure		500	{object}	httperr.RestErr
-//	@Router			/user/{id} [get]
+//	@Router			/user [get]
 func (h *handler) GetUserByID(w http.ResponseWriter, r *http.Request) {
-  id := chi.URLParam(r, "id")
-  if id == "" {
-    slog.Error("id is empty", slog.String("package", "userhandler"))
-    w.WriteHeader(http.StatusBadRequest)
-    msg := httperr.NewBadRequestError("id is required")
-    json.NewEncoder(w).Encode(msg)
-    return
-  }
-  _, err := uuid.Parse(id)
+  user, err := utils.DecodeJwt(r)
   if err != nil {
-    slog.Error(fmt.Sprintf("error to parse id: %v", err), slog.String("package", "userhandler"))
+    slog.Error("error to decode jwt", slog.String("package", "userhandler"))
     w.WriteHeader(http.StatusBadRequest)
-    msg := httperr.NewBadRequestError("error to parse id")
+    msg := httperr.NewBadRequestError("error to decode jwt")
     json.NewEncoder(w).Encode(msg)
     return
   }
-  res, err := h.service.GetUserByID(r.Context(), id)
+  res, err := h.service.GetUserByID(r.Context(), user.ID)
   if err != nil {
     slog.Error(fmt.Sprintf("error to get user: %v", err), slog.String("package", "userhandler"))
     if err.Error() == "user not found" {
@@ -201,25 +184,17 @@ func (h *handler) GetUserByID(w http.ResponseWriter, r *http.Request) {
 //	@Failure		400	{object}	httperr.RestErr
 //	@Failure		404	{object}	httperr.RestErr
 //	@Failure		500	{object}	httperr.RestErr
-//	@Router			/user/{id} [delete]
+//	@Router			/user [delete]
 func (h *handler) DeleteUser(w http.ResponseWriter, r *http.Request) {
-  id := chi.URLParam(r, "id")
-  if id == "" {
-    slog.Error("id is empty", slog.String("package", "userhandler"))
-    w.WriteHeader(http.StatusBadRequest)
-    msg := httperr.NewBadRequestError("id is required")
-    json.NewEncoder(w).Encode(msg)
-    return
-  }
-  _, err := uuid.Parse(id)
+  user, err := utils.DecodeJwt(r)
   if err != nil {
-    slog.Error(fmt.Sprintf("error to parse id: %v", err), slog.String("package", "userhandler"))
+    slog.Error("error to decode jwt", slog.String("package", "userhandler"))
     w.WriteHeader(http.StatusBadRequest)
-    msg := httperr.NewBadRequestError("error to parse id")
+    msg := httperr.NewBadRequestError("error to decode jwt")
     json.NewEncoder(w).Encode(msg)
     return
   }
-  err = h.service.DeleteUser(r.Context(), id)
+  err = h.service.DeleteUser(r.Context(), user.ID)
   if err != nil {
     slog.Error(fmt.Sprintf("error to delete user: %v", err), slog.String("package", "userhandler"))
     if err.Error() == "user not found" {
@@ -274,23 +249,15 @@ func (h *handler) FindManyUsers(w http.ResponseWriter, r *http.Request) {
 //	@Success		200
 //	@Failure		400	{object}	httperr.RestErr
 //	@Failure		500	{object}	httperr.RestErr
-//	@Router			/user/password/{id} [get]
+//	@Router			/user/password [get]
 func (h *handler) UpdateUserPassword(w http.ResponseWriter, r *http.Request) {
   var req dto.UpdateUserPasswordDto
 
-  id := chi.URLParam(r, "id")
-  if id == "" {
-    slog.Error("id is empty", slog.String("package", "userhandler"))
-    w.WriteHeader(http.StatusBadRequest)
-    msg := httperr.NewBadRequestError("id is required")
-    json.NewEncoder(w).Encode(msg)
-    return
-  }
-  _, err := uuid.Parse(id)
+  user, err := utils.DecodeJwt(r)
   if err != nil {
-    slog.Error(fmt.Sprintf("error to parse id: %v", err), slog.String("package", "userhandler"))
+    slog.Error("error to decode jwt", slog.String("package", "userhandler"))
     w.WriteHeader(http.StatusBadRequest)
-    msg := httperr.NewBadRequestError("error to parse id")
+    msg := httperr.NewBadRequestError("error to decode jwt")
     json.NewEncoder(w).Encode(msg)
     return
   }
@@ -316,7 +283,7 @@ func (h *handler) UpdateUserPassword(w http.ResponseWriter, r *http.Request) {
     json.NewEncoder(w).Encode(httpErr)
     return
   }
-  err = h.service.UpdateUserPassword(r.Context(), &req, id)
+  err = h.service.UpdateUserPassword(r.Context(), &req, user.ID)
   if err != nil {
     slog.Error(fmt.Sprintf("error to update user password: %v", err), slog.String("package", "userhandler"))
     if err.Error() == "user not found" {
